--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,7 @@
 
-/*footer, div, section {
-  outline: #000 solid 2px;
-  background-color: rgba(255, 0, 0, 0.1);
-}*/
-
 img {
   width: 100%;
   height: auto;
-}
-
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 body {
@@ -22,6 +11,13 @@ body {
   line-height: 22px;
 
   color: #fff;
+}
+
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .container {
@@ -53,8 +49,8 @@ body {
   margin-right: 15px;
 }
 
-.navigation ul {
-  margin: 0;
+.navigation > ul {
+  margin: 15px 0 0;
   padding-left: 0;
   font-size: 0;
   list-style: none;
@@ -63,57 +59,68 @@ body {
 .navigation_item {
   position: relative;
   display: inline-block;
-
+  vertical-align: top;
   font-size: 16px;
   font-weight: 700;
   line-height: 22px;
-  vertical-align: baseline;
+}
+
+.navigation_item:hover {
+  background-color: #fff;
+  border-radius: 16px;
+}
+
+.navigation_item:hover .navigation_link {
+  color: #000;
+  text-decoration: none;
+}
+
+.navigation_link:active {
+  color: #000;
+  background-color: #f7f6f3;
+  border-radius: 16px;
+  box-shadow: inset 0 2px 2px #696969;
+  text-decoration: none;
 }
 
 .navigation_link {
   display: block;
-
-  padding: 20px 15px;
+  padding: 5px 15px;
   color: #fff;
   text-decoration: underline;
 }
 
-.navigation_link:hover {
-  padding: 5px 15px;
-
-  border-radius: 16px;
-  text-decoration: none;
-  background-color: #fff;
-  color: #000;
-}
-
-.navigation_link:active {
-  box-shadow: inset 0 2px 2px #696969;
-}
-
-.navigation_link_active {
-  padding: 5px 15px;
-
-  border-radius: 16px;
-  text-decoration: none;
+.navigation_item_active {
   background-color: #d07058;
-  color: #fff;
+  border-radius: 16px;
+}
+
+.navigation_item_active .navigation_link {
+  text-decoration: none;
+  cursor: default;
+}
+
+.navigation_item:hover .navigation_popup_wrap {
+  visibility: visible;
 }
 
 .navigation_popup_wrap {
   position: absolute;
-  top: 37px;
+  top: 100%;
+  padding: 5px 0 0;
   left: -7px;
   min-width: 144px;
-  background-color: #f8f7f4;
-  border-radius: 7px;
   z-index: 20;
-  display: none;
+  visibility: hidden;
 }
 
 .navigation_popup {
   margin: 0;
   padding: 0;
+  border-radius: 4px;
+  background-color: #f8f7f4;
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
+  list-style: none;
 }
 
 .navigation_popup li {
@@ -134,15 +141,21 @@ body {
   font-weight: 700;
   margin: 0 7px;
   border-bottom: 1px solid rgba(52, 52, 52, 0.2);
+  cursor: default;
 }
 
 .navigation_popup_link:not(.navigation_popup_title):not(.navigation_popup_active):hover {
   background: #fbded7;
 }
 
+.navigation_popup_link:not(.navigation_popup_title):not(.navigation_popup_active):active {
+  background-color: #f6b5a5;
+}
+
 .navigation_popup_active {
   background: #d07058;
   color: #fff;
+  cursor: default;
 }
 
 .user_block {
@@ -1056,8 +1069,10 @@ textarea:focus:-ms-input-placeholder {
 
 .page_title h1 {
   margin: 0;
-  margin-top: 5px;
   padding: 0;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 37px;
 }
 
 .breadcrumbs {
@@ -1098,9 +1113,270 @@ textarea:focus:-ms-input-placeholder {
   text-decoration: underline;
 }
 
-.page_content .filters {
-  margin-top: 30px;
+.page_content .catalog_filters {
+  margin-top: 15px;
   margin-bottom: 40px;
+  max-width: 890px;
+}
+
+.filter_form_item {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  margin: 35px 15px 0 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #fff;
+  background-color: rgba(255,255,255,0.2);
+  border-radius: 17px;
+  border: none;
+}
+
+.filter_form_title {
+  position: absolute;
+  top: -22px;
+  left: 0;
+  padding: 0 15px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: 500;
+}
+
+.filter_form_sort {
+  display: block;
+  position: relative;
+  margin: 0;
+  padding: 0 25px 0 13px;
+  width: 192px;
+  height: 36px;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #fff;
+  border: none;
+  border-radius: 17px;
+  outline: none;
+  background: 0 0;
+  cursor: pointer;
+  overflow: hidden;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+.filter_form_sort:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.filter_form_sort:hover + .filter_form_sort-icon {
+  background: url(../img/sort-icon-b.svg) no-repeat;
+}
+
+.filter_form_sort-icon {
+  position: absolute;
+  display: block;
+  width: 8px;
+  height: 5px;
+  top: 50%;
+  right: 15px;
+  margin-top: -2px;
+  background: url(../img/sort-icon.svg) no-repeat;
+}
+
+.filter_form_fatcontent,
+.filter_form_fillers {
+  margin: 0;
+  padding: 0 9px;
+  font-size: 0;
+  text-align: left;
+  list-style: none;
+}
+
+.filter_form_fatcontent_item,
+.filter_form_fillers_item {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #fff;
+}
+
+.filter_form_radio-control,
+.filter_form_checkbox-control {
+  display: block;
+  position: relative;
+  padding: 9px 12px 9px 37px;
+  cursor: pointer;
+}
+
+.filter_form_checkbox-control {
+  padding: 9px 17px 9px 37px;
+}
+
+.filter_form_radio-control:hover input[type=radio]:not(:disabled) + .filter_form_radio-icon,
+.filter_form_checkbox-control:hover input[type=checkbox]:not(:disabled) + .filter_form_checkbox-icon {
+  border: 2px solid #fff;
+}
+
+.filter_form input[type=checkbox],
+.filter_form input[type=radio] {
+  display: none;
+}
+
+.filter_form input[type=checkbox]:disabled + .filter_form_checkbox-icon,
+.filter_form input[type=radio]:disabled + .filter_form_radio-icon {
+  opacity: 0.4;
+}
+
+.filter_form_radio-icon {
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  top: 50%;
+  margin-top: -10px;
+  left: 6px;
+  border: 1px solid #fff;
+  border-radius: 18px;
+}
+
+.filter_form_radio-icon::before {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  margin-top: -6px;
+  margin-left: -6px;
+  width: 12px;
+  height: 12px;
+  border-radius: 7px;
+  background-color: #fff
+}
+
+.filter_form input[type=checkbox]:checked + .filter_form_checkbox-icon::before,
+.filter_form input[type=radio]:checked + .filter_form_radio-icon::before {
+  display: block;
+}
+
+.filter_form_checkbox-icon {
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 20px;
+  box-sizing: border-box;
+  top: 50%;
+  margin-top: -10px;
+  left: 6px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+}
+
+.filter_form_checkbox-icon::before {
+  content: "";
+  position: absolute;
+  display: none;
+  top: 50%;
+  left: 50%;
+  margin-top: -6px;
+  margin-left: -6px;
+  width: 12px;
+  height: 12px;
+  background-image: url(../img/checkbox-icon.png);
+}
+
+.filter_form_btn {
+  display: inline-block;
+  vertical-align: top;
+  padding: 7px 28px;
+  margin-top: 35px;
+  height: 36px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 18px;
+  text-align: center;
+  text-transform: none;
+  text-decoration: none;
+  white-space: normal;
+  background-color: rgba(255,255,255,.19);
+  color: #fff;
+  box-shadow: none;
+  border: 2px solid #fff;
+  border-radius: 18px;
+  cursor: pointer;
+  outline: none;
+}
+
+.filter_form_btn:hover {
+  background-color: #fff;
+  color: #000;
+}
+
+.filter_form_btn:active {
+  padding: 9px 30px;
+  border: none;
+  background-color: #ededed;
+  box-shadow: inset 0 2px 2px #696969;
+  color: #000;
+}
+
+.filter_form_price input[type="text"] {
+  display: none;
+}
+
+.filter_form_price_control {
+  position: relative;
+  width: 188px;
+  padding: 0 15px;
+  height: 36px;
+}
+
+.filter_form_range_scale, .filter_form_range_bar {
+  position: absolute;
+  top: 50%;
+  height: 4px;
+  margin-top: -2px;
+}
+
+.filter_form_range_scale {
+  background-color: rgba(255,255,255,.5);
+  width: 188px;
+}
+
+.filter_form_range_bar {
+  left: 22px;
+  width: 107px;
+  background-color: #fff;
+}
+
+.filter_form_range_toggle {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  margin-top: -10px;
+  border-radius: 12px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.filter_form_range_toggle:hover {
+  width: 22px;
+  height: 22px;
+  margin-top: -11px;
+  margin-left: -1px;
+}
+
+.filter_form_range_toggle-min {
+  left: 34px;
+}
+
+.filter_form_range_toggle-max {
+  left: 132px;
 }
 
 .catalog {
@@ -1116,32 +1392,75 @@ textarea:focus:-ms-input-placeholder {
 }
 
 .page_navigation {
+  display: inline-block;
   margin-bottom: 40px;
   font-size: 0;
 }
 
-.page_navigation a {
+.page_navigation_link {
   display: inline-block;
-  padding: 2px 10px;
+  vertical-align: top;
+  min-width: 18px;
+  height: 18px;
+  padding: 4px;
   margin-right: 3px;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 18px;
   border-radius: 19px;
   color: #fff;
   text-decoration: none;
+  text-align: center;
 }
 
-.page_navigation a:hover {
+.page_navigation_link:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
-.page_navigation .current {
+.page_navigation_link_current {
   background-color: #fff;
   color: #000;
 }
 
-.page_navigation .current:hover {
+.page_navigation_link_current:hover {
   background-color: #fff;
+}
+
+.page_navigation_arrow {
+  position: relative;
+  vertical-align: top;
+  display: inline-block;
+  padding: 4px 4px 0 0;
+  margin: 0;
+  min-width: 18px;
+  height: 18px;
+  font-size: 16px;
+  line-height: 18px;
+  color: transparent;
+}
+
+.page_navigation_prev::before, .page_navigation_next::before {
+  content: '';
+  position: absolute;
+  top: 6px;
+  width: 10px;
+  height: 14px;
+}
+
+
+.page_navigation_next::before {
+  background: url(../img/page-nav-arrow.svg) no-repeat;
+  right: 0;
+}
+
+.page_navigation_prev::before {
+  background: url(../img/page-nav-arrow.svg) no-repeat;
+  transform: rotate(180deg);
+  left: 0;
+}
+
+.page_navigation_inactive {
+  opacity: 0.2;
+  cursor: default;
 }
 
 .footer {
