--- a/css/style.css
+++ b/css/style.css
@@ -107,9 +107,8 @@ body {
 .navigation_popup_wrap {
   position: absolute;
   top: 100%;
-  padding: 5px 0 0;
   left: -7px;
-  min-width: 144px;
+  padding: 5px 0 0;
   z-index: 20;
   visibility: hidden;
 }
@@ -117,6 +116,7 @@ body {
 .navigation_popup {
   margin: 0;
   padding: 0;
+  min-width: 144px;
   border-radius: 4px;
   background-color: #f8f7f4;
   box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
@@ -166,7 +166,8 @@ body {
   font-size: 0;
 }
 
-.user_block a {
+.user_block_btn {
+  position: relative;
   display: inline-block;
   vertical-align: middle;
 
@@ -177,9 +178,23 @@ body {
   line-height: 22px;
   color: #fff;
   text-decoration: none;
+
 }
 
-.user_block .search {
+.user_block_btn:not(.inactive) {
+  cursor: pointer;
+}
+
+.user_block_popup_wrap {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  padding: 5px 0 0;
+  z-index: 20;
+  visibility: hidden;
+}
+
+.user_block_btn_search {
   width: 33px;
   height: 33px;
 
@@ -187,34 +202,177 @@ body {
   border-radius: 17px;
 }
 
-.user_block .search:hover {
+.search_form_popup,
+.login_form_popup {
+  padding: 15px;
+  background-color: #f8f7f4;
+  border-radius: 4px;
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
+  cursor: default;
+}
+
+.search_form_popup input[type="text"],
+.login_form_popup input[type="email"],
+.login_form_popup input[type="password"] {
+  font-size: 14px;
+  line-height: 20px;
+  min-width: 242px;
+}
+
+.user_block_btn_search:not(.inactive):hover {
     background: #fff url(../img/search-black.svg) no-repeat center;
     color: #323232;
 }
 
-.user_block .login {
+.user_block_btn_search:not(.inactive):hover .user_block_popup_wrap {
+  visibility: visible;
+}
+
+.user_block_btn_login {
   padding: 5px 15px 5px 45px;
 
   background: rgba(255, 255, 255, 0.2) url(../img/login-icon.svg) no-repeat 16px;
   border-radius: 17px;
 }
 
-.user_block .login:hover {
+.user_block_btn_login:not(.inactive):hover {
     background: #fff url(../img/login-black.svg) no-repeat 16px;
     color: #323232;
 }
 
-.user_block .cart {
-  padding: 5px 35px 5px 45px;
+.user_block_btn_login:not(.inactive):hover .user_block_popup_wrap {
+  visibility: visible;
+}
+
+
+.login_form_popup input[type="email"] {
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.login_form_popup input[type="password"] {
+  margin-bottom: 15px;
+}
+
+.login_form_links {
+  display: inline-block;
+  vertical-align: top;
+  margin-left: 20px;
+}
+
+.login_form_link {
+  display: block;
+  font-size: 13px;
+  line-height: 22px;
+  text-align: left;
+  text-decoration: underline;
+  color: #333;
+}
+
+.user_block_btn_cart {
+  padding: 5px 25px 5px 45px;
   margin-right: 0;
 
   background: rgba(255, 255, 255, 0.2) url(../img/cart-icon.svg) no-repeat 16px;
   border-radius: 17px;
 }
 
-.user_block .cart:hover {
-    background: #fff url(../img/cart-black.svg) no-repeat 16px;
-    color: #323232;
+.user_block_btn_cart.basket_full {
+  background: #fff url(../img/cart-black.svg) no-repeat 16px;
+  color: #323232;
+}
+
+.user_block_btn_cart:not(.inactive):hover .user_block_popup_wrap{
+  visibility: visible;
+}
+
+.cart_color_wrap {
+  padding: 15px;
+  background-color:#f8f7f4;
+  border-radius: 4px;
+  box-shadow: 0 20px 20px 0 rgba(0,0,0,.4);
+  cursor: default;
+}
+
+.cart_popup {
+  min-width: 540px;
+  border-collapse: collapse;
+}
+
+.cart_popup tbody {
+  font-size: 13px;
+  line-height: 20px;
+  text-align: left;
+  color: #333;
+}
+
+.cart_popup tbody tr:last-of-type td {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #cacac7;
+}
+
+.cart_popup .item_control {
+  position: relative;
+  width: 11px;
+}
+
+.cart_popup .remove_product {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 11px;
+  height: 11px;
+  margin-top: -8px;
+  font-size: 0;
+  background-color: transparent;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+.cart_popup .remove_product::before,
+.cart_popup .remove_product::after {
+    content: "";
+    position: absolute;
+    width: 12px;
+    height: 1px;
+    background-color: #353535;
+}
+
+.cart_popup .remove_product::before {
+  transform: rotate(45deg);
+}
+
+.cart_popup .remove_product::after{
+  transform: rotate(-45deg);
+}
+
+.cart_popup .item_preview {
+  padding: 5px 15px;
+  min-width: 33px;
+}
+
+.cart_popup .item_amount_price {
+  padding: 5px 15px;
+  min-width: 95px;
+}
+
+.cart_popup .item_price {
+  color: #808080;
+}
+
+.cart_popup .item_sum {
+  padding: 5px 15px;
+  min-width: 50px;
+}
+
+.cart_total_sum {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 15px;
+  font-weight: 900;
+  line-height: 24px;
+  color: #333;
 }
 
 .user_block p {
@@ -323,7 +481,7 @@ input#slide3:checked ~ .container .slide3 {
 
 .btn {
   display: inline-block;
-  padding: 10px 23px;
+  padding: 9px 23px 11px;
 
   font-weight: 700;
   font-size: 17px;
@@ -928,12 +1086,13 @@ input#slide3:checked ~ .container .slide3 {
 
 input[type="text"],
 input[type="email"],
+input[type="password"],
 textarea {
   box-sizing: border-box;
   padding: 10px 16px;
   font-size: 16px;
   font-family: Roboto,Arial,sans-serif;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 24px;
   color: #656565;
   border: 1px solid rgba(178,178,178,0.52);
@@ -957,6 +1116,7 @@ textarea {
 
 input[type="text"]:hover,
 input[type="email"]:hover,
+input[type="password"]:hover,
 textarea:hover {
   padding: 9px 15px;
   border: 2px solid rgba(154,154,154,0.52);
@@ -964,6 +1124,7 @@ textarea:hover {
 
 input[type="text"]:focus,
 input[type="email"]:focus,
+input[type="password"]:focus,
 textarea:focus {
   padding: 9px 15px;
   border: 2px solid #8fbdec;
